@@ -18,7 +18,6 @@ package org.apache.solr.cloud.overseer;
 
 import static org.apache.solr.cloud.overseer.CollectionMutator.checkCollectionKeyExistence;
 
-import com.google.common.collect.ImmutableSet;
 import java.lang.invoke.MethodHandles;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
@@ -31,11 +30,10 @@ import org.apache.solr.cloud.Overseer;
 import org.apache.solr.cloud.api.collections.Assign;
 import org.apache.solr.common.cloud.ClusterState;
 import org.apache.solr.common.cloud.DocCollection;
-import org.apache.solr.common.cloud.PerReplicaStates;
-import org.apache.solr.common.cloud.PerReplicaStatesOps;
 import org.apache.solr.common.cloud.Replica;
 import org.apache.solr.common.cloud.RoutingRule;
 import org.apache.solr.common.cloud.Slice;
+import org.apache.solr.common.cloud.Slice.SliceStateProps;
 import org.apache.solr.common.cloud.SolrZkClient;
 import org.apache.solr.common.cloud.ZkCoreNodeProps;
 import org.apache.solr.common.cloud.ZkNodeProps;
@@ -51,8 +49,7 @@ public class SliceMutator {
   public static final String PREFERRED_LEADER_PROP =
       CollectionAdminParams.PROPERTY_PREFIX + "preferredleader";
 
-  public static final Set<String> SLICE_UNIQUE_BOOLEAN_PROPERTIES =
-      ImmutableSet.of(PREFERRED_LEADER_PROP);
+  public static final Set<String> SLICE_UNIQUE_BOOLEAN_PROPERTIES = Set.of(PREFERRED_LEADER_PROP);
 
   protected final SolrCloudManager cloudManager;
   protected final DistribStateManager stateManager;
@@ -101,26 +98,22 @@ public class SliceMutator {
         new Replica(
             coreNodeName,
             Utils.makeMap(
-                ZkStateReader.CORE_NAME_PROP, message.getStr(ZkStateReader.CORE_NAME_PROP),
-                ZkStateReader.STATE_PROP, message.getStr(ZkStateReader.STATE_PROP),
-                ZkStateReader.NODE_NAME_PROP, nodeName,
-                ZkStateReader.BASE_URL_PROP, baseUrl,
-                ZkStateReader.REPLICA_TYPE, message.get(ZkStateReader.REPLICA_TYPE)),
+                ZkStateReader.CORE_NAME_PROP,
+                message.getStr(ZkStateReader.CORE_NAME_PROP),
+                ZkStateReader.STATE_PROP,
+                message.getStr(ZkStateReader.STATE_PROP),
+                ZkStateReader.NODE_NAME_PROP,
+                nodeName,
+                ZkStateReader.BASE_URL_PROP,
+                baseUrl,
+                ZkStateReader.FORCE_SET_STATE_PROP,
+                "false",
+                ZkStateReader.REPLICA_TYPE,
+                message.get(ZkStateReader.REPLICA_TYPE)),
             coll,
             slice);
 
-    if (collection.isPerReplicaState()) {
-      PerReplicaStates prs =
-          PerReplicaStates.fetch(collection.getZNode(), zkClient, collection.getPerReplicaStates());
-      return new ZkWriteCommand(
-          coll,
-          updateReplica(collection, sl, replica.getName(), replica),
-          PerReplicaStatesOps.addReplica(
-              replica.getName(), replica.getState(), replica.isLeader(), prs),
-          true);
-    } else {
-      return new ZkWriteCommand(coll, updateReplica(collection, sl, replica.getName(), replica));
-    }
+    return new ZkWriteCommand(coll, updateReplica(collection, sl, replica.getName(), replica));
   }
 
   public ZkWriteCommand removeReplica(ClusterState clusterState, ZkNodeProps message) {
@@ -145,15 +138,7 @@ public class SliceMutator {
       }
       newSlices.put(slice.getName(), slice);
     }
-
-    if (coll.isPerReplicaState()) {
-      PerReplicaStatesOps replicaOps =
-          PerReplicaStatesOps.deleteReplica(
-              cnn, PerReplicaStates.fetch(coll.getZNode(), zkClient, coll.getPerReplicaStates()));
-      return new ZkWriteCommand(collection, coll.copyWithSlices(newSlices), replicaOps, true);
-    } else {
-      return new ZkWriteCommand(collection, coll.copyWithSlices(newSlices));
-    }
+    return new ZkWriteCommand(collection, coll.copyWithSlices(newSlices));
   }
 
   public ZkWriteCommand setShardLeader(ClusterState clusterState, ZkNodeProps message) {
@@ -182,31 +167,20 @@ public class SliceMutator {
           ZkCoreNodeProps.getCoreUrl(
               replica.getBaseUrl(), replica.getStr(ZkStateReader.CORE_NAME_PROP));
 
-      if (replica == oldLeader && !coreURL.equals(leaderUrl)) {
-        replica = new ReplicaMutator(cloudManager).unsetLeader(replica);
+      if (replica.equals(oldLeader) && !coreURL.equals(leaderUrl)) {
+        replica = ReplicaMutator.unsetLeader(replica);
       } else if (coreURL.equals(leaderUrl)) {
-        newLeader = replica = new ReplicaMutator(cloudManager).setLeader(replica);
+        newLeader = replica = ReplicaMutator.setLeader(replica);
       }
 
       newReplicas.put(replica.getName(), replica);
     }
 
     Map<String, Object> newSliceProps = slice.shallowCopy();
-    newSliceProps.put(Slice.REPLICAS, newReplicas);
+    newSliceProps.put(SliceStateProps.REPLICAS, newReplicas);
     slice = new Slice(slice.getName(), newReplicas, slice.getProperties(), collectionName);
-    if (coll.isPerReplicaState()) {
-      PerReplicaStates prs =
-          PerReplicaStates.fetch(coll.getZNode(), zkClient, coll.getPerReplicaStates());
-      return new ZkWriteCommand(
-          collectionName,
-          CollectionMutator.updateSlice(collectionName, coll, slice),
-          PerReplicaStatesOps.flipLeader(
-              slice.getReplicaNames(), newLeader == null ? null : newLeader.getName(), prs),
-          false);
-    } else {
-      return new ZkWriteCommand(
-          collectionName, CollectionMutator.updateSlice(collectionName, coll, slice));
-    }
+    return new ZkWriteCommand(
+        collectionName, CollectionMutator.updateSlice(collectionName, coll, slice));
   }
 
   public ZkWriteCommand updateShardState(ClusterState clusterState, ZkNodeProps message) {
@@ -232,7 +206,7 @@ public class SliceMutator {
       Map<String, Object> props = slice.shallowCopy();
 
       if (Slice.State.getState(message.getStr(key)) == Slice.State.ACTIVE) {
-        props.remove(Slice.PARENT);
+        props.remove(SliceStateProps.PARENT);
         props.remove("shard_parent_node");
         props.remove("shard_parent_zk_session");
       }
