@@ -17,15 +17,15 @@
 package org.apache.solr.schema;
 
 import java.io.File;
-import java.io.FileInputStream;
+import java.io.InputStream;
 import java.lang.invoke.MethodHandles;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.regex.Pattern;
 import org.apache.commons.io.FileUtils;
-import org.apache.commons.io.IOUtils;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.params.CoreAdminParams;
 import org.apache.solr.common.util.NamedList;
@@ -50,7 +50,7 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
   private static final String confDir = collection + "/conf";
 
   @Before
-  private void initManagedSchemaCore() throws Exception {
+  public void initManagedSchemaCore() throws Exception {
     tmpSolrHome = createTempDir().toFile();
     tmpConfDir = new File(tmpSolrHome, confDir);
     File testHomeConfDir = new File(TEST_HOME(), confDir);
@@ -77,7 +77,7 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
   }
 
   @After
-  private void afterClass() throws Exception {
+  public void afterClass() {
     deleteCore();
     System.clearProperty("managed.schema.mutable");
     System.clearProperty("enable.update.log");
@@ -86,7 +86,7 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
   public void testUpgrade() throws Exception {
     File managedSchemaFile = new File(tmpConfDir, "managed-schema.xml");
     assertTrue(managedSchemaFile.exists());
-    String managedSchema = FileUtils.readFileToString(managedSchemaFile, "UTF-8");
+    String managedSchema = Files.readString(managedSchemaFile.toPath(), StandardCharsets.UTF_8);
     assertTrue(managedSchema.contains("DO NOT EDIT"));
     File upgradedOriginalSchemaFile = new File(tmpConfDir, "schema-minimal.xml.bak");
     assertTrue(upgradedOriginalSchemaFile.exists());
@@ -101,7 +101,7 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
     initCore("solrconfig-managed-schema.xml", "schema-minimal.xml", tmpSolrHome.getPath());
     File managedSchemaFile = new File(tmpConfDir, "managed-schema.xml");
     assertTrue(managedSchemaFile.exists());
-    String managedSchema = FileUtils.readFileToString(managedSchemaFile, "UTF-8");
+    String managedSchema = Files.readString(managedSchemaFile.toPath(), StandardCharsets.UTF_8);
     assertTrue(managedSchema.contains("DO NOT EDIT"));
     File upgradedOriginalSchemaFile = new File(tmpConfDir, "schema-minimal.xml.bak");
     assertTrue(upgradedOriginalSchemaFile.exists());
@@ -183,7 +183,7 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
     } catch (Exception e) {
       for (Throwable t = e; t != null; t = t.getCause()) {
         // short circuit out if we found what we expected
-        if (t.getMessage() != null && -1 != t.getMessage().indexOf(errString)) return;
+        if (t.getMessage() != null && t.getMessage().contains(errString)) return;
       }
       // otherwise, rethrow it, possibly completely unrelated
       throw new SolrException(
@@ -201,7 +201,7 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
     File managedSchemaFile = new File(tmpConfDir, "managed-schema.xml");
     Files.delete(
         managedSchemaFile
-            .toPath()); // Delete managed-schema.xml so it won't block parsing a new schema
+            .toPath()); // Delete managed-schema.xml, so it won't block parsing a new schema
 
     System.setProperty("managed.schema.mutable", "true");
     initCore(
@@ -210,7 +210,8 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
         tmpSolrHome.getPath());
 
     assertTrue(managedSchemaFile.exists());
-    String managedSchemaContents = FileUtils.readFileToString(managedSchemaFile, "UTF-8");
+    String managedSchemaContents =
+        Files.readString(managedSchemaFile.toPath(), StandardCharsets.UTF_8);
     assertFalse(managedSchemaContents.contains("\"new_field\""));
 
     Map<String, Object> options = new HashMap<>();
@@ -223,9 +224,9 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
     h.getCore().setLatestSchema(newSchema);
 
     assertTrue(managedSchemaFile.exists());
-    FileInputStream stream = new FileInputStream(managedSchemaFile);
-    managedSchemaContents = IOUtils.toString(stream, "UTF-8");
-    stream.close(); // Explicitly close so that Windows can delete this file
+    try (InputStream stream = Files.newInputStream(managedSchemaFile.toPath())) {
+      managedSchemaContents = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
+    }
     assertTrue(
         managedSchemaContents.contains(
             "<field name=\"new_field\" type=\"string\" stored=\"false\"/>"));
@@ -235,7 +236,7 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
     assertSchemaResource(collection, "managed-schema.xml");
     deleteCore();
     File managedSchemaFile = new File(tmpConfDir, "managed-schema.xml");
-    // Delete managed-schema.xml so it won't block parsing a new schema
+    // Delete managed-schema.xml, so it won't block parsing a new schema
     Files.delete(managedSchemaFile.toPath());
     System.setProperty("managed.schema.mutable", "true");
     initCore(
@@ -244,7 +245,8 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
         tmpSolrHome.getPath());
 
     assertTrue(managedSchemaFile.exists());
-    String managedSchemaContents = FileUtils.readFileToString(managedSchemaFile, "UTF-8");
+    String managedSchemaContents =
+        Files.readString(managedSchemaFile.toPath(), StandardCharsets.UTF_8);
     assertFalse(managedSchemaContents.contains("\"new_field\""));
 
     clearIndex();
@@ -257,7 +259,7 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
     } catch (Exception e) {
       for (Throwable t = e; t != null; t = t.getCause()) {
         // short circuit out if we found what we expected
-        if (t.getMessage() != null && -1 != t.getMessage().indexOf(errString)) return;
+        if (t.getMessage() != null && t.getMessage().contains(errString)) return;
       }
       // otherwise, rethrow it, possibly completely unrelated
       throw new SolrException(
@@ -288,7 +290,7 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
   public void testAddFieldWhenItAlreadyExists() throws Exception {
     deleteCore();
     File managedSchemaFile = new File(tmpConfDir, "managed-schema.xml");
-    // Delete managed-schema.xml so it won't block parsing a new schema
+    // Delete managed-schema.xml, so it won't block parsing a new schema
     Files.delete(managedSchemaFile.toPath());
     System.setProperty("managed.schema.mutable", "true");
     initCore(
@@ -314,7 +316,7 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
     } catch (Exception e) {
       for (Throwable t = e; t != null; t = t.getCause()) {
         // short circuit out if we found what we expected
-        if (t.getMessage() != null && -1 != t.getMessage().indexOf(errString)) return;
+        if (t.getMessage() != null && t.getMessage().contains(errString)) return;
       }
       // otherwise, rethrow it, possibly completely unrelated
       throw new SolrException(
@@ -329,7 +331,7 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
   public void testAddSameFieldTwice() throws Exception {
     deleteCore();
     File managedSchemaFile = new File(tmpConfDir, "managed-schema.xml");
-    // Delete managed-schema.xml so it won't block parsing a new schema
+    // Delete managed-schema.xml, so it won't block parsing a new schema
     Files.delete(managedSchemaFile.toPath());
     System.setProperty("managed.schema.mutable", "true");
     initCore(
@@ -355,7 +357,7 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
     } catch (Exception e) {
       for (Throwable t = e; t != null; t = t.getCause()) {
         // short circuit out if we found what we expected
-        if (t.getMessage() != null && -1 != t.getMessage().indexOf(errString)) return;
+        if (t.getMessage() != null && t.getMessage().contains(errString)) return;
       }
       // otherwise, rethrow it, possibly completely unrelated
       throw new SolrException(
@@ -370,7 +372,7 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
   public void testAddDynamicField() throws Exception {
     deleteCore();
     File managedSchemaFile = new File(tmpConfDir, "managed-schema.xml");
-    // Delete managed-schema.xml so it won't block parsing a new schema
+    // Delete managed-schema.xml, so it won't block parsing a new schema
     Files.delete(managedSchemaFile.toPath());
     System.setProperty("managed.schema.mutable", "true");
     initCore(
@@ -396,7 +398,7 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
     } catch (Exception e) {
       for (Throwable t = e; t != null; t = t.getCause()) {
         // short circuit out if we found what we expected
-        if (t.getMessage() != null && -1 != t.getMessage().indexOf(errString)) return;
+        if (t.getMessage() != null && t.getMessage().contains(errString)) return;
       }
       // otherwise, rethrow it, possibly completely unrelated
       throw new SolrException(
@@ -411,7 +413,7 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
   public void testAddWithSchemaCodecFactory() throws Exception {
     deleteCore();
     File managedSchemaFile = new File(tmpConfDir, "managed-schema.xml");
-    // Delete managed-schema.xml so it won't block parsing a new schema
+    // Delete managed-schema.xml, so it won't block parsing a new schema
     Files.delete(managedSchemaFile.toPath());
     System.setProperty("managed.schema.mutable", "true");
     initCore("solrconfig-managed-schema.xml", "schema_codec.xml", tmpSolrHome.getPath());
@@ -442,7 +444,7 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
   public void testAddWithSchemaSimilarityFactory() throws Exception {
     deleteCore();
     File managedSchemaFile = new File(tmpConfDir, "managed-schema.xml");
-    // Delete managed-schema.xml so it won't block parsing a new schema
+    // Delete managed-schema.xml, so it won't block parsing a new schema
     Files.delete(managedSchemaFile.toPath());
     System.setProperty("managed.schema.mutable", "true");
     initCore("solrconfig-managed-schema.xml", "schema-bm25.xml", tmpSolrHome.getPath());
@@ -474,7 +476,7 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
     assertSchemaResource(collection, "managed-schema.xml");
     deleteCore();
     File managedSchemaFile = new File(tmpConfDir, "managed-schema.xml");
-    // Delete managed-schema.xml so it won't block parsing a new schema
+    // Delete managed-schema.xml, so it won't block parsing a new schema
     Files.delete(managedSchemaFile.toPath());
     System.setProperty("managed.schema.mutable", "true");
     initCore(
@@ -483,7 +485,8 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
         tmpSolrHome.getPath());
 
     assertTrue(managedSchemaFile.exists());
-    String managedSchemaContents = FileUtils.readFileToString(managedSchemaFile, "UTF-8");
+    String managedSchemaContents =
+        Files.readString(managedSchemaFile.toPath(), StandardCharsets.UTF_8);
     assertFalse(managedSchemaContents.contains("\"new_field\""));
 
     Map<String, Object> options = new HashMap<>();
@@ -502,9 +505,9 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
     initCore();
 
     assertTrue(managedSchemaFile.exists());
-    FileInputStream stream = new FileInputStream(managedSchemaFile);
-    managedSchemaContents = IOUtils.toString(stream, "UTF-8");
-    stream.close(); // Explicitly close so that Windows can delete this file
+    try (InputStream stream = Files.newInputStream(managedSchemaFile.toPath())) {
+      managedSchemaContents = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
+    }
     assertTrue(
         managedSchemaContents.contains(
             "<field name=\"new_field\" type=\"string\" stored=\"false\"/>"));
@@ -516,7 +519,7 @@ public class TestManagedSchema extends AbstractBadConfigTestBase {
   public void testAddFieldThenReload() throws Exception {
     deleteCore();
     File managedSchemaFile = new File(tmpConfDir, "managed-schema.xml");
-    // Delete managed-schema.xml so it won't block parsing a new schema
+    // Delete managed-schema.xml, so it won't block parsing a new schema
     Files.delete(managedSchemaFile.toPath());
     System.setProperty("managed.schema.mutable", "true");
     initCore(
