@@ -26,6 +26,7 @@ import static org.apache.solr.security.BasicAuthStandaloneTest.doHttpPostWithHea
 import java.io.IOException;
 import java.io.Serializable;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.security.Principal;
 import java.util.List;
 import java.util.Map;
@@ -34,18 +35,17 @@ import java.util.function.Predicate;
 import javax.servlet.FilterChain;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
-import org.apache.commons.io.FileUtils;
 import org.apache.http.HttpResponse;
 import org.apache.http.client.HttpClient;
 import org.apache.http.client.methods.HttpGet;
 import org.apache.http.message.BasicHeader;
 import org.apache.solr.SolrTestCaseJ4;
-import org.apache.solr.client.solrj.embedded.JettySolrRunner;
+import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.impl.HttpClientUtil;
-import org.apache.solr.client.solrj.impl.HttpSolrClient;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.util.CommandOperation;
 import org.apache.solr.common.util.Utils;
+import org.apache.solr.embedded.JettySolrRunner;
 import org.apache.solr.handler.admin.SecurityConfHandler;
 import org.apache.solr.handler.admin.SecurityConfHandlerLocalForTesting;
 import org.junit.After;
@@ -87,28 +87,34 @@ public class MultiAuthPluginTest extends SolrTestCaseJ4 {
     final String user = "admin";
     final String pass = "SolrRocks";
 
-    HttpClient cl = null;
-    HttpSolrClient httpSolrClient = null;
+    HttpClient httpClient = null;
+    SolrClient solrClient = null;
     try {
-      cl = HttpClientUtil.createClient(null);
-      String baseUrl = buildUrl(jetty.getLocalPort(), "/solr");
-      httpSolrClient = getHttpSolrClient(baseUrl);
+      httpClient = HttpClientUtil.createClient(null);
+      String baseUrl = buildUrl(jetty.getLocalPort());
+      solrClient = getHttpSolrClient(baseUrl);
 
-      verifySecurityStatus(cl, baseUrl + authcPrefix, "/errorMessages", null, 5);
+      verifySecurityStatus(httpClient, baseUrl + authcPrefix, "/errorMessages", null, 5);
 
       // Initialize security.json with multiple auth plugins configured
       String multiAuthPluginSecurityJson =
-          FileUtils.readFileToString(
-              TEST_PATH().resolve("security").resolve("multi_auth_plugin_security.json").toFile(),
+          Files.readString(
+              TEST_PATH().resolve("security").resolve("multi_auth_plugin_security.json"),
               StandardCharsets.UTF_8);
       securityConfHandler.persistConf(
           new SecurityConfHandler.SecurityConfig()
               .setData(Utils.fromJSONString(multiAuthPluginSecurityJson)));
       securityConfHandler.securityConfEdited();
       verifySecurityStatus(
-          cl, baseUrl + authcPrefix, "authentication/class", "solr.MultiAuthPlugin", 5, user, pass);
+          httpClient,
+          baseUrl + authcPrefix,
+          "authentication/class",
+          "solr.MultiAuthPlugin",
+          5,
+          user,
+          pass);
       verifySecurityStatus(
-          cl,
+          httpClient,
           baseUrl + authzPrefix,
           "authorization/class",
           "solr.MultiAuthRuleBasedAuthorizationPlugin",
@@ -117,32 +123,32 @@ public class MultiAuthPluginTest extends SolrTestCaseJ4 {
           pass);
 
       // anonymous requests are blocked by all plugins
-      int statusCode = doHttpGetAnonymous(cl, baseUrl + "/admin/info/system");
+      int statusCode = doHttpGetAnonymous(httpClient, baseUrl + "/admin/info/system");
       assertEquals("anonymous get succeeded but should not have", 401, statusCode);
       // update blockUnknown to allow anonymous for the basic plugin
       String command = "{\n" + "'set-property': { 'basic': {'blockUnknown':false} }\n" + "}";
-      doHttpPost(cl, baseUrl + authcPrefix, command, user, pass, 200);
-      statusCode = doHttpGetAnonymous(cl, baseUrl + "/admin/info/system");
+      doHttpPost(httpClient, baseUrl + authcPrefix, command, user, pass, 200);
+      statusCode = doHttpGetAnonymous(httpClient, baseUrl + "/admin/info/system");
       assertEquals("anonymous get failed but should have succeeded", 200, statusCode);
 
       // For the multi-auth plugin, every command is wrapped with an object that identifies the
       // "scheme"
       command = "{\n" + "'set-user': {'harry':'HarryIsCool'}\n" + "}";
       // no scheme identified!
-      doHttpPost(cl, baseUrl + authcPrefix, command, user, pass, 400);
+      doHttpPost(httpClient, baseUrl + authcPrefix, command, user, pass, 400);
 
       command = "{\n" + "'set-user': { 'foo': {'harry':'HarryIsCool'} }\n" + "}";
       // no "foo" scheme configured
-      doHttpPost(cl, baseUrl + authcPrefix, command, user, pass, 400);
+      doHttpPost(httpClient, baseUrl + authcPrefix, command, user, pass, 400);
 
       command = "{\n" + "'set-user': { 'basic': {'harry':'HarryIsCool'} }\n" + "}";
 
       // no creds, should fail ...
-      doHttpPost(cl, baseUrl + authcPrefix, command, null, null, 401);
+      doHttpPost(httpClient, baseUrl + authcPrefix, command, null, null, 401);
       // with basic creds, should pass ...
-      doHttpPost(cl, baseUrl + authcPrefix, command, user, pass, 200);
+      doHttpPost(httpClient, baseUrl + authcPrefix, command, user, pass, 200);
       verifySecurityStatus(
-          cl,
+          httpClient,
           baseUrl + authcPrefix,
           "authentication/schemes[0]/credentials/harry",
           NOT_NULL_PREDICATE,
@@ -152,13 +158,13 @@ public class MultiAuthPluginTest extends SolrTestCaseJ4 {
 
       // authz command but missing the "scheme" wrapper
       command = "{\n" + "'set-user-role': {'harry':['users']}\n" + "}";
-      doHttpPost(cl, baseUrl + authzPrefix, command, user, pass, 400);
+      doHttpPost(httpClient, baseUrl + authzPrefix, command, user, pass, 400);
 
       // add "harry" to the "users" role ...
       command = "{\n" + "'set-user-role': { 'basic': {'harry':['users']} }\n" + "}";
-      doHttpPost(cl, baseUrl + authzPrefix, command, user, pass, 200);
+      doHttpPost(httpClient, baseUrl + authzPrefix, command, user, pass, 200);
       verifySecurityStatus(
-          cl,
+          httpClient,
           baseUrl + authzPrefix,
           "authorization/schemes[0]/user-role/harry",
           NOT_NULL_PREDICATE,
@@ -168,14 +174,20 @@ public class MultiAuthPluginTest extends SolrTestCaseJ4 {
 
       // give the users role a custom permission
       verifySecurityStatus(
-          cl, baseUrl + authzPrefix, "authorization/permissions[6]", NULL_PREDICATE, 5, user, pass);
+          httpClient,
+          baseUrl + authzPrefix,
+          "authorization/permissions[6]",
+          NULL_PREDICATE,
+          5,
+          user,
+          pass);
       command =
           "{\n"
               + "'set-permission': { 'name':'k8s-zk', 'role':'users', 'collection':null, 'path':'/admin/zookeeper/status' }\n"
               + "}";
-      doHttpPost(cl, baseUrl + authzPrefix, command, user, pass, 200);
+      doHttpPost(httpClient, baseUrl + authzPrefix, command, user, pass, 200);
       verifySecurityStatus(
-          cl,
+          httpClient,
           baseUrl + authzPrefix,
           "authorization/permissions[6]/path",
           new ExpectedValuePredicate("/admin/zookeeper/status"),
@@ -187,9 +199,9 @@ public class MultiAuthPluginTest extends SolrTestCaseJ4 {
           "{\n"
               + "'update-permission': { 'index':'7', 'name':'k8s-zk', 'role':'users', 'collection':null, 'path':'/admin/zookeeper/status2' }\n"
               + "}";
-      doHttpPost(cl, baseUrl + authzPrefix, command, user, pass, 200);
+      doHttpPost(httpClient, baseUrl + authzPrefix, command, user, pass, 200);
       verifySecurityStatus(
-          cl,
+          httpClient,
           baseUrl + authzPrefix,
           "authorization/permissions[6]/path",
           new ExpectedValuePredicate("/admin/zookeeper/status2"),
@@ -199,16 +211,22 @@ public class MultiAuthPluginTest extends SolrTestCaseJ4 {
 
       // delete the permission
       command = "{\n" + "'delete-permission': 7\n" + "}";
-      doHttpPost(cl, baseUrl + authzPrefix, command, user, pass, 200);
+      doHttpPost(httpClient, baseUrl + authzPrefix, command, user, pass, 200);
       verifySecurityStatus(
-          cl, baseUrl + authzPrefix, "authorization/permissions[6]", NULL_PREDICATE, 5, user, pass);
+          httpClient,
+          baseUrl + authzPrefix,
+          "authorization/permissions[6]",
+          NULL_PREDICATE,
+          5,
+          user,
+          pass);
 
       // delete the user
       command = "{\n" + "'delete-user': { 'basic': 'harry' }\n" + "}";
 
-      doHttpPost(cl, baseUrl + authcPrefix, command, user, pass, 200);
+      doHttpPost(httpClient, baseUrl + authcPrefix, command, user, pass, 200);
       verifySecurityStatus(
-          cl,
+          httpClient,
           baseUrl + authcPrefix,
           "authentication/schemes[0]/credentials/harry",
           NULL_PREDICATE,
@@ -220,9 +238,13 @@ public class MultiAuthPluginTest extends SolrTestCaseJ4 {
       command = "{\n" + "'set-property': { 'mock': { 'blockUnknown':false } }\n" + "}";
 
       doHttpPostWithHeader(
-          cl, baseUrl + authcPrefix, command, new BasicHeader("Authorization", "mock foo"), 200);
+          httpClient,
+          baseUrl + authcPrefix,
+          command,
+          new BasicHeader("Authorization", "mock foo"),
+          200);
       verifySecurityStatus(
-          cl,
+          httpClient,
           baseUrl + authcPrefix,
           "authentication/schemes[1]/blockUnknown",
           new ExpectedValuePredicate(Boolean.FALSE),
@@ -230,11 +252,11 @@ public class MultiAuthPluginTest extends SolrTestCaseJ4 {
           user,
           pass);
     } finally {
-      if (cl != null) {
-        HttpClientUtil.close(cl);
+      if (httpClient != null) {
+        HttpClientUtil.close(httpClient);
       }
-      if (httpSolrClient != null) {
-        httpSolrClient.close();
+      if (solrClient != null) {
+        solrClient.close();
       }
     }
   }
