@@ -23,7 +23,6 @@ import static org.apache.solr.common.cloud.ZkStateReader.NRT_REPLICAS;
 import static org.apache.solr.common.cloud.ZkStateReader.NUM_SHARDS_PROP;
 import static org.apache.solr.common.util.Utils.fromJSONString;
 
-import com.google.common.collect.ImmutableList;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.StringReader;
@@ -40,75 +39,11 @@ import org.apache.solr.common.util.ContentStreamBase;
 import org.apache.solr.common.util.JavaBinCodec;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.common.util.SimpleOrderedMap;
-import org.apache.solr.common.util.StrUtils;
 import org.apache.solr.common.util.Utils;
 import org.junit.Assert;
 
 /** */
 public class TestUtils extends SolrTestCaseJ4 {
-
-  public void testJoin() {
-    assertEquals("a|b|c", StrUtils.join(asList("a", "b", "c"), '|'));
-    assertEquals("a,b,c", StrUtils.join(asList("a", "b", "c"), ','));
-    assertEquals("a\\,b,c", StrUtils.join(asList("a,b", "c"), ','));
-    assertEquals("a,b|c", StrUtils.join(asList("a,b", "c"), '|'));
-
-    assertEquals("a\\\\b|c", StrUtils.join(asList("a\\b", "c"), '|'));
-  }
-
-  public void testEscapeTextWithSeparator() {
-    assertEquals("a", StrUtils.escapeTextWithSeparator("a", '|'));
-    assertEquals("a", StrUtils.escapeTextWithSeparator("a", ','));
-
-    assertEquals("a\\|b", StrUtils.escapeTextWithSeparator("a|b", '|'));
-    assertEquals("a|b", StrUtils.escapeTextWithSeparator("a|b", ','));
-    assertEquals("a,b", StrUtils.escapeTextWithSeparator("a,b", '|'));
-    assertEquals("a\\,b", StrUtils.escapeTextWithSeparator("a,b", ','));
-    assertEquals("a\\\\b", StrUtils.escapeTextWithSeparator("a\\b", ','));
-
-    assertEquals("a\\\\\\,b", StrUtils.escapeTextWithSeparator("a\\,b", ','));
-  }
-
-  public void testSplitEscaping() {
-    List<String> arr = StrUtils.splitSmart("\\r\\n:\\t\\f\\b", ":", true);
-    assertEquals(2, arr.size());
-    assertEquals("\r\n", arr.get(0));
-    assertEquals("\t\f\b", arr.get(1));
-
-    arr = StrUtils.splitSmart("\\r\\n:\\t\\f\\b", ":", false);
-    assertEquals(2, arr.size());
-    assertEquals("\\r\\n", arr.get(0));
-    assertEquals("\\t\\f\\b", arr.get(1));
-
-    arr = StrUtils.splitWS("\\r\\n \\t\\f\\b", true);
-    assertEquals(2, arr.size());
-    assertEquals("\r\n", arr.get(0));
-    assertEquals("\t\f\b", arr.get(1));
-
-    arr = StrUtils.splitWS("\\r\\n \\t\\f\\b", false);
-    assertEquals(2, arr.size());
-    assertEquals("\\r\\n", arr.get(0));
-    assertEquals("\\t\\f\\b", arr.get(1));
-
-    arr = StrUtils.splitSmart("\\:foo\\::\\:bar\\:", ":", true);
-    assertEquals(2, arr.size());
-    assertEquals(":foo:", arr.get(0));
-    assertEquals(":bar:", arr.get(1));
-
-    arr = StrUtils.splitWS("\\ foo\\  \\ bar\\ ", true);
-    assertEquals(2, arr.size());
-    assertEquals(" foo ", arr.get(0));
-    assertEquals(" bar ", arr.get(1));
-
-    arr = StrUtils.splitFileNames("/h/s,/h/\\,s,");
-    assertEquals(2, arr.size());
-    assertEquals("/h/s", arr.get(0));
-    assertEquals("/h/,s", arr.get(1));
-
-    arr = StrUtils.splitFileNames("/h/s");
-    assertEquals(1, arr.size());
-    assertEquals("/h/s", arr.get(0));
-  }
 
   public void testNamedLists() {
     SimpleOrderedMap<Integer> map = new SimpleOrderedMap<>();
@@ -136,7 +71,7 @@ public class TestUtils extends SolrTestCaseJ4 {
     assertEquals("ONE", map.getName(0));
     assertEquals(Integer.valueOf(100), map.get("one", 1));
     assertEquals(4, map.indexOf(null, 1));
-    assertEquals(null, map.get(null, 1));
+    assertNull(map.get(null, 1));
 
     map = new SimpleOrderedMap<>();
     map.add("one", 1);
@@ -353,9 +288,7 @@ public class TestUtils extends SolrTestCaseJ4 {
             sink,
             (Map<String, Object>)
                 Utils.fromJSONString("collectionDefaults:{numShards:3 , nrtReplicas:2}")));
-    assertEquals(
-        3L, Utils.getObjectByPath(sink, true, ImmutableList.of(COLLECTION_DEF, NUM_SHARDS_PROP)));
-    assertEquals(
-        2L, Utils.getObjectByPath(sink, true, ImmutableList.of(COLLECTION_DEF, NRT_REPLICAS)));
+    assertEquals(3L, Utils.getObjectByPath(sink, true, List.of(COLLECTION_DEF, NUM_SHARDS_PROP)));
+    assertEquals(2L, Utils.getObjectByPath(sink, true, List.of(COLLECTION_DEF, NRT_REPLICAS)));
   }
 }
