@@ -23,6 +23,7 @@ import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Date;
@@ -30,8 +31,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Random;
-import org.apache.commons.io.IOUtils;
-import org.apache.lucene.util.TestUtil;
+import org.apache.lucene.tests.util.TestUtil;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.common.EnumFieldValue;
 import org.apache.solr.common.SolrDocument;
@@ -42,8 +42,11 @@ import org.apache.solr.util.ConcurrentLRUCache;
 import org.apache.solr.util.RTimer;
 import org.junit.Test;
 import org.noggit.CharArr;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class TestJavaBinCodec extends SolrTestCaseJ4 {
+  private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
   private static final String SOLRJ_JAVABIN_BACKCOMPAT_BIN = "/solrj/javabin_backcompat.bin";
   private static final String BIN_FILE_LOCATION =
@@ -209,7 +212,7 @@ public class TestJavaBinCodec extends SolrTestCaseJ4 {
       if (unmarshaledObj.get(i) instanceof byte[] && matchObj.get(i) instanceof byte[]) {
         byte[] b1 = (byte[]) unmarshaledObj.get(i);
         byte[] b2 = (byte[]) matchObj.get(i);
-        assertTrue(Arrays.equals(b1, b2));
+        assertArrayEquals(b1, b2);
       } else if (unmarshaledObj.get(i) instanceof SolrDocument
           && matchObj.get(i) instanceof SolrDocument) {
         assertTrue(compareSolrDocument(unmarshaledObj.get(i), matchObj.get(i)));
@@ -252,21 +255,17 @@ public class TestJavaBinCodec extends SolrTestCaseJ4 {
         ByteArrayOutputStream os = new ByteArrayOutputStream()) {
 
       Object data = generateAllDataTypes();
-      try {
-        javabin.marshal(data, os);
-        byte[] newFormatBytes = os.toByteArray();
+      javabin.marshal(data, os);
+      byte[] newFormatBytes = os.toByteArray();
 
-        InputStream is = getClass().getResourceAsStream(SOLRJ_JAVABIN_BACKCOMPAT_BIN);
-        byte[] currentFormatBytes = IOUtils.toByteArray(is);
-
+      try (InputStream is = getClass().getResourceAsStream(SOLRJ_JAVABIN_BACKCOMPAT_BIN)) {
+        assertNotNull(is);
+        byte[] currentFormatBytes = is.readAllBytes();
         for (int i = 1;
             i < currentFormatBytes.length;
             i++) { // ignore the first byte. It is version information
           assertEquals(newFormatBytes[i], currentFormatBytes[i]);
         }
-
-      } catch (IOException e) {
-        throw e;
       }
     }
   }
@@ -279,15 +278,16 @@ public class TestJavaBinCodec extends SolrTestCaseJ4 {
       javabin.marshal(sdoc, os);
       byte[] newFormatBytes = os.toByteArray();
 
-      InputStream is = getClass().getResourceAsStream(SOLRJ_JAVABIN_BACKCOMPAT_BIN_CHILD_DOCS);
-      byte[] currentFormatBytes = IOUtils.toByteArray(is);
+      try (InputStream is =
+          getClass().getResourceAsStream(SOLRJ_JAVABIN_BACKCOMPAT_BIN_CHILD_DOCS)) {
+        assertNotNull(is);
+        byte[] currentFormatBytes = is.readAllBytes();
 
-      // ignore the first byte. It is version information
-      for (int i = 1; i < currentFormatBytes.length; i++) {
-        assertEquals(newFormatBytes[i], currentFormatBytes[i]);
+        // ignore the first byte. It is version information
+        for (int i = 1; i < currentFormatBytes.length; i++) {
+          assertEquals(newFormatBytes[i], currentFormatBytes[i]);
+        }
       }
-    } catch (IOException e) {
-      throw e;
     }
   }
 
@@ -564,7 +564,7 @@ public class TestJavaBinCodec extends SolrTestCaseJ4 {
 
   // common-case ascii
   static String str(Random r, int sz) {
-    StringBuffer sb = new StringBuffer(sz);
+    StringBuilder sb = new StringBuilder(sz);
     for (int i = 0; i < sz; i++) {
       sb.append('\n' + r.nextInt(128 - '\n'));
     }
@@ -627,7 +627,7 @@ public class TestJavaBinCodec extends SolrTestCaseJ4 {
             try {
               doDecode(buffers, iter, stringCache);
             } catch (IOException e) {
-              e.printStackTrace();
+              log.error("exception decoding", e);
             }
           });
     }
