@@ -20,10 +20,10 @@ package org.apache.solr.common.util;
 import static org.apache.solr.common.util.ValidatingJsonMap.ENUM_OF;
 import static org.apache.solr.common.util.ValidatingJsonMap.NOT_NULL;
 
-import com.google.common.collect.ImmutableSet;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import org.apache.solr.SolrTestCaseJ4;
 
 public class TestValidatingJsonMap extends SolrTestCaseJ4 {
@@ -46,9 +46,9 @@ public class TestValidatingJsonMap extends SolrTestCaseJ4 {
     assertEquals(Boolean.FALSE, m.getBool("b", Boolean.TRUE));
     assertEquals(Integer.valueOf(10), m.getInt("i", 0));
 
-    expectThrows(RuntimeException.class, () -> m.getList("l", ENUM_OF, ImmutableSet.of("X", "Z")));
+    expectThrows(RuntimeException.class, () -> m.getList("l", ENUM_OF, Set.of("X", "Z")));
 
-    List<?> l = m.getList("l", ENUM_OF, ImmutableSet.of("X", "Y", "Z"));
+    List<?> l = m.getList("l", ENUM_OF, Set.of("X", "Y", "Z"));
     assertEquals(2, l.size());
     m.getList("l", NOT_NULL);
     assertNotNull(m.getMap("c"));
